--- a/EECS4350_Project0.vcxproj.filters
+++ b/EECS4350_Project0.vcxproj.filters
@@ -33,4 +33,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="project0.frag">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="project0.vert">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
